small screen hero-header alignment fix

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,11 +12,10 @@
  *  #### HERO BLOCKS ####
  */
 .hero-header {
-  position: relative;
   width: 100%;
   line-height: $base-line-height * $base-font-size * 1.05;
   background-color: $thistle;
-  padding: 2rem;
+  padding: 2em 0;
   margin: 0;
   text-align: center;
 }
